--- a/wp-content/themes/hd/resources/sass/app.scss
+++ b/wp-content/themes/hd/resources/sass/app.scss
@@ -1793,10 +1793,12 @@ article.product {
                     border-radius: 50%;
                     font-weight: 300;
                     background: none;
+                    position: relative;
                     &::before {
                         content: '\f06e';
                         font-family: $font-awesome;
                         font-size: $small-font-size !important;
+                        @include centering-elements();
                     }
                     &:hover {
                         box-shadow: inset 0 0 0 1px transparentize($color3, 0.9);
@@ -3858,7 +3860,7 @@ body.woocommerce-order-received {
 .section.home-products {
     background-color: #f7f7f7;
     .grid-products {
-        @include grid-gap2(5, 4, 2, 20, 10);
+        @include grid-flex(5, 4, 2, 20, 10);
         /*justify-content: center;*/
         .cell {
             &.cell-0, &.cell-1, &.cell-2 {
